add date facet.  the facet is based on dateIssued, and is called dateIssuedYear

--- a/config/locales/curation_concerns.en.yml
+++ b/config/locales/curation_concerns.en.yml
@@ -49,6 +49,7 @@ en:
           publisher_sim: Publisher
           file_format_sim: Format
           generic_type_sim: Type
+          dateIssuedYear_sim: Date
         index:
           description_tesim: "Description"
           tag_tesim: "Keyword"
